# WhisCode

./: .env.1password.whiscode-smb.example  .gitignore  CLAUDE.md  README.md  hotwords.example.txt  install.sh  install_full.sh  pyproject.toml
.agents/checkpoints/: 2026-05-13-guided-hands-free-enrollment-checkpoints.md  2026-05-13-hands-free-keyword-detection-checkpoints.md  2026-05-13-recording-status-notifications-checkpoints.md  2026-05-14-gate-handsfree-silence-checkpoints.md  2026-05-14-hands-free-telemetry-checkpoints.md  (+57 more)
tests/: test_asr_engine_manager.py  test_benchmark_asr.py  test_calibrate.py  test_command_config.py  test_crispasr_asr.py  test_enroll.py  test_external_transcription.py  test_file_loader.py  test_file_watcher.py  test_handsfree.py  test_hotwords.py  test_injector.py  test_llama_cpp_asr.py  test_main_branch_lock.py  test_main_cli.py  test_mlx_vibevoice_asr.py  test_postprocess.py  test_recorder.py  test_recording_overlay.py  test_refiner.py  test_reminders.py  test_stats.py  test_status_notifier.py  test_telemetry.py  test_transcriber.py  test_transcription_queue.py
whiscode/: __main__.py  asr_engine_manager.py  benchmark_asr.py  calibrate.py  crispasr_asr.py  deferred_delivery.py  enroll.py  external_transcription.py  file_loader.py  file_watcher.py  handsfree.py  hotwords.py  injector.py  llama_cpp_asr.py  main.py  mlx_vibevoice_asr.py  postprocess.py  recorder.py  recording_overlay.py  refiner.py  reminders.py  stats.py  status_notifier.py  telemetry.py  transcriber.py  transcription_queue.py
wiki/: index.md  log.md
(+136 files in other folders)
