[project]
name = "whiscode"
version = "0.1.0"
description = "Voice-to-keyboard for code dictation using Whisper"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio[stt]",
    "sounddevice",
    "pynput",
    "numpy",
    "local-wake==0.1.2",
]

[project.scripts]
whiscode = "whiscode.main:main"
whiscode-enroll = "whiscode.enroll:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
