[project]
name = "whiscode"
version = "2.0.0b1"
description = "Voice-to-keyboard for code dictation using Whisper"
requires-python = ">=3.10"
dependencies = [
    "mlx-audio[stt]",
    "sounddevice",
    "pynput",
    "numpy",
    "local-wake==0.1.2",
    "pyobjc-framework-Cocoa",
]

[project.scripts]
whiscode = "whiscode.main:main"
whiscode-enroll = "whiscode.enroll:main"
whiscode-calibrate = "whiscode.calibrate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
